cdk.out/AwsCdkStackStack.template.json
{
 "Resources": {
  "MyVpc": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "15.0.0.0/16",
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "AwsCdkStackStack/MyVpc"
   }
  },
  "MyPublicSubnet": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "15.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "Name",
      "Value": "PubSubnet"
     }
    ],
    "VpcId": {
     "Ref": "MyVpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AwsCdkStackStack/MyPublicSubnet"
   }
  },
  "MyPrivateSubnet1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "15.0.2.0/24",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PrivSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MyVpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AwsCdkStackStack/MyPrivateSubnet1"
   }
  },
  "MyPrivateSubnet2": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "15.0.3.0/24",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PrivSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MyVpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AwsCdkStackStack/MyPrivateSubnet2"
   }
  },
  "MyPrivateSubnet3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "15.0.4.0/24",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PrivSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "MyVpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AwsCdkStackStack/MyPrivateSubnet3"
   }
  },
  "MyInternetGateway": {
   "Type": "AWS::EC2::InternetGateway",
   "Metadata": {
    "aws:cdk:path": "AwsCdkStackStack/MyInternetGateway"
   }
  },
  "MyVPCGatewayAttachment": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "MyInternetGateway"
    },
    "VpcId": {
     "Ref": "MyVpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AwsCdkStackStack/MyVPCGatewayAttachment"
   }
  },
  "MyEIP": {
   "Type": "AWS::EC2::EIP",
   "Metadata": {
    "aws:cdk:path": "AwsCdkStackStack/MyEIP"
   }
  },
  "MyNatGateway": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "MyEIP",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "MyPublicSubnet"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AwsCdkStackStack/MyNatGateway"
   }
  },
  "PubRT": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MyVpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AwsCdkStackStack/PubRT"
   }
  },
  "PrivRT": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MyVpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AwsCdkStackStack/PrivRT"
   }
  },
  "PublicRoute": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MyInternetGateway"
    },
    "RouteTableId": {
     "Ref": "PubRT"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AwsCdkStackStack/PublicRoute"
   }
  },
  "PrivateRoute": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MyNatGateway"
    },
    "RouteTableId": {
     "Ref": "PrivRT"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AwsCdkStackStack/PrivateRoute"
   }
  },
  "PubSubnetRTAssociation": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PubRT"
    },
    "SubnetId": {
     "Ref": "MyPublicSubnet"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AwsCdkStackStack/PubSubnetRTAssociation"
   }
  },
  "PrivSubnetRTAssociationMyPrivateSubnet1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PrivRT"
    },
    "SubnetId": {
     "Ref": "MyPrivateSubnet1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AwsCdkStackStack/PrivSubnetRTAssociationMyPrivateSubnet1"
   }
  },
  "PrivSubnetRTAssociationMyPrivateSubnet2": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PrivRT"
    },
    "SubnetId": {
     "Ref": "MyPrivateSubnet2"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AwsCdkStackStack/PrivSubnetRTAssociationMyPrivateSubnet2"
   }
  },
  "PrivSubnetRTAssociationMyPrivateSubnet3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PrivRT"
    },
    "SubnetId": {
     "Ref": "MyPrivateSubnet3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "AwsCdkStackStack/PrivSubnetRTAssociationMyPrivateSubnet3"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/03N0QqCQBAF0G/pXTfX6ANkifAlRKPXGNcRN3UW3FlEpH8PNbKnO5d7YGIhz7GIDjC6UFdt2JlSzAWDbgMY3RN1LGZV0yNTgaqp8CUhL1dKjAMhX4FxhCnYzLclzKCbHmmllzRb4gb/OLee8Q5lh7+2P9jHxDmrDbCx9F4hOusHvVplqTLbkk3cWDqehIyElIeXMyYcPLHpUeRbfgCjbC2b6QAAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "AwsCdkStackStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "il-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
